Fixes to the designer (#2414)
* Now only does one pass if the start and target depth are the same
* Added undoable actions for the shape settings